<resources>
    <string name="app_name">SHOpen Gamer App</string>
    <string name="slogan">Ваше время скоро закончится.</string>
    <string name="open_name">Армагеддон. \n 4 минуты до полуночи</string>
    <!-- Strings used for fragments for navigation -->

    <string name="open_logo">Open logo</string>
    <string name="login_title">ВХОД</string>
    <string name="team_color_field">Цвет команды</string>
    <string name="game_date_field">Дата игры</string>
    <string name="login_button">Войти</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
