<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".LoginActivity">

    <TextView
        style="@style/TextAppearance.MyTheme.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/login_title" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/team_color_input"
            android:hint="@string/team_color_field" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/game_date_input"
            android:hint="@string/game_date_field"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/TextAppearance.MyTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login_button"
        android:textColor="@color/white_50" />
</LinearLayout>